Removed PMD and checkstyle.
SVN-Revision: 17497