@@ -7,6 +7,7 @@
  * @version 1.00
  * Created on October 10,2006
  */
+
 package edu.wustl.catissuecore.domain;
 
 import java.io.Serializable;
@@ -19,7 +20,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
 import edu.wustl.catissuecore.actionForm.DefineArrayForm;
 import edu.wustl.catissuecore.actionForm.OrderBiospecimenArrayForm;
 import edu.wustl.catissuecore.actionForm.OrderPathologyCaseForm;
@@ -40,110 +40,127 @@ import edu.wustl.common.exception.AssignDataException;
 import edu.wustl.common.util.MapDataParser;
 import edu.wustl.common.util.logger.Logger;
 
-
 /**
  * Order corresponds to the orders requested by the user(scientist/researcher).
  * @hibernate.class table="CATISSUE_ORDER"
  * @author ashish_gupta
  */
+
 public class OrderDetails extends AbstractDomainObject implements Serializable
 {
-	//To show custom message for add and edit.
+	/**
+	 * logger Logger - Generic logger.
+	 */
+	private static org.apache.log4j.Logger logger = Logger.getLogger(OrderDetails.class);
+
+	/**
+	 * To show custom message for add and edit.
+	 */
 	private boolean operationAdd;
-	
-	
+
+	/**
+	 * Serial Version ID.
+	 */
 	private static final long serialVersionUID = -2292977224238830710L;
+
 	/**
-     * System generated unique id.
-     */
-    protected Long id;
-    
-    /**
-     * String containing name of the order.
-     */
-    protected String name;
-    
-    /**
-     * String containing the comments entered by user.
-     */
-    protected String comment;
-    
-    /**
-     * Requested Date when the order was placed.
-     */
-    protected Date requestedDate;
-    
-    /**
-     * String containing the status of order.
-     */
-    protected String status;
-    
+	 * System generated unique id.
+	 */
+	protected Long id;
+
 	/**
-     * Distribution Protocol object associated with that order.
-     */
+	 * String containing name of the order.
+	 */
+	protected String name;
+
+	/**
+	 * String containing the comments entered by user.
+	 */
+	protected String comment;
+
+	/**
+	 * Requested Date when the order was placed.
+	 */
+	protected Date requestedDate;
+
+	/**
+	 * String containing the status of order.
+	 */
+	protected String status;
+
+	/**
+	 * Distribution Protocol object associated with that order.
+	 */
 	protected DistributionProtocol distributionProtocol;
-	
+
 	/**
-     * The Order Items associated with that order.
-     */
+	 * The Order Items associated with that order.
+	 */
 	protected Collection orderItemCollection;
 	/**
 	 * The distributions associated with the order.
 	 */
 	protected Collection distributionCollection;
-	
-	protected Boolean mailNotification= new Boolean(false);
+
+	/**
+	 * mailNotification.
+	 */
+	protected Boolean mailNotification = Boolean.FALSE;
+
 	/**
 	 * Default constructor.
 	 */
 	public OrderDetails()
 	{
-		// Default Constructor, required for Hibernate
+		super();
 	}
-	
+
 	/**
+	 * Parameterized Constructor.
 	 * @param form AbstractActionForm
 	 * @throws AssignDataException object.
 	 */
-	public OrderDetails(AbstractActionForm form)throws AssignDataException
+	public OrderDetails(AbstractActionForm form) throws AssignDataException
 	{
+		super();
 		setAllValues(form);
 	}
 
 	/**
-     * Returns the system generated unique id.
-     * @hibernate.id name="id" column="IDENTIFIER" type="long" length="30"
-     * unsaved-value="null" generator-class="native"
-     * @hibernate.generator-param name="sequence" value="CATISSUE_ORDER_SEQ"
-     * @return the system generated unique id.
-     * @see #setId(Long)
-     * */
+	 * Returns the system generated unique id.
+	 * @hibernate.id name="id" column="IDENTIFIER" type="long" length="30"
+	 * unsaved-value="null" generator-class="native"
+	 * @hibernate.generator-param name="sequence" value="CATISSUE_ORDER_SEQ"
+	 * @return the system generated unique id.
+	 * @see #setId(Long)
+	 * */
 	public Long getId()
-	{		
+	{
 		return id;
 	}
+
 	/**
-     * Sets the system generated unique id.
-     * @param id the system generated unique id.
-     * @see #getId()
-     * */
-    public void setId(Long id)
-    {
-        this.id = id;
-    }
-	 /**
-     * Returns the comments about the order.
-     * @hibernate.property name="comments" type="string" 
-     * column="COMMENTS" length="1000"
-     * @return the comments about the order.
-     * @see #setComments(String)
-     */
+	 * Sets the system generated unique id.
+	 * @param identifier the system generated unique id.
+	 * @see #getId()
+	 * */
+	public void setId(Long identifier)
+	{
+		this.id = identifier;
+	}
+
+	/**
+	* Returns the comments about the order.
+	* @hibernate.property name="comments" type="string"
+	* column="COMMENTS" length="1000"
+	* @return the comments about the order.
+	* @see #setComments(String)
+	*/
 	public String getComment()
 	{
 		return comment;
 	}
 
-	
 	/**
 	 * Sets the comments for the request order.
 	 * @param comment the comment to set
@@ -153,8 +170,7 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	{
 		this.comment = comment;
 	}
-	
-	
+
 	/**
 	 * @return Returns the mailNotification.
 	 */
@@ -173,7 +189,8 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 
 	/**
 	 * The distribution protocol associated with the order.
-	 * @hibernate.many-to-one column="DISTRIBUTION_PROTOCOL_ID" class="edu.wustl.catissuecore.domain.DistributionProtocol"
+	 * @hibernate.many-to-one column="DISTRIBUTION_PROTOCOL_ID" class="edu.wustl.
+	 * catissuecore.domain.DistributionProtocol"
 	 * constrained="true"
 	 * @return the distributionProtocol
 	 */
@@ -182,7 +199,6 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		return distributionProtocol;
 	}
 
-	
 	/**
 	 * @param distributionProtocol the distributionProtocol to set
 	 * @see #getDistributionProtocol()
@@ -192,7 +208,6 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		this.distributionProtocol = distributionProtocol;
 	}
 
-	
 	/**
 	 * @return the name
 	 * @hibernate.property column="NAME" name="comments" type="string" length="500"
@@ -203,7 +218,6 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		return name;
 	}
 
-	
 	/**
 	 * @param name the name to set
 	 * @see #getName()
@@ -212,19 +226,19 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	{
 		this.name = name;
 	}
-	
+
 	/**
 	 * @return the orderItemCollection
-	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.OrderItem" cascade="save-update" lazy="false"
+	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.
+	 * OrderItem" cascade="save-update" lazy="false"
 	 * @hibernate.set name="orderItemCollection" table="CATISSUE_ORDER_ITEM"
-	 * @hibernate.collection-key column="ORDER_ID" 
+	 * @hibernate.collection-key column="ORDER_ID"
 	 */
 	public Collection getOrderItemCollection()
 	{
 		return orderItemCollection;
 	}
 
-	
 	/**
 	 * @param orderItemCollection the orderItemCollection to set
 	 * @see #getOrderItemCollection()
@@ -234,17 +248,15 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		this.orderItemCollection = orderItemCollection;
 	}
 
-	
 	/**
 	 * @return the requestedDate
-	 * @hibernate.property name="requestedDate"  column="REQUESTED_DATE" 
+	 * @hibernate.property name="requestedDate"  column="REQUESTED_DATE"
 	 */
 	public Date getRequestedDate()
 	{
 		return requestedDate;
 	}
 
-	
 	/**
 	 * @param requestedDate the requestedDate to set
 	 * @see #getRequestedDate()
@@ -254,7 +266,6 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		this.requestedDate = requestedDate;
 	}
 
-	
 	/**
 	 * @return the status
 	 * @hibernate.property name="status" type="string" column="STATUS" length="50"
@@ -264,7 +275,6 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		return status;
 	}
 
-	
 	/**
 	 * @param status the status to set
 	 * @see #getStatus()
@@ -275,100 +285,104 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	}
 
 	/**
-	 * @param abstractActionForm object.
+	 * @param abstractForm object.
 	 * @throws AssignDataException object.
 	 */
 	public void setAllValues(IValueObject abstractForm) throws AssignDataException
 	{
 		final AbstractActionForm abstractActionForm = (AbstractActionForm) abstractForm;
-		if(abstractActionForm.isAddOperation()) //insert
+		if (abstractActionForm.isAddOperation()) //insert
 		{
 			operationAdd = true;
 			insertOrderDetails(abstractActionForm);
 		}
-		else //update 
+		else //update
 		{
 			updateOrderDetails(abstractActionForm);
 		}
-			
+
 	}
 
 	/**
-	 * This function inserts order data to order table  
+	 * This function inserts order data to order table.
 	 * @param abstractActionForm object
 	 */
 	private void insertOrderDetails(AbstractActionForm abstractActionForm)
 	{
-		HashMap orderItemsMap=null;
+		HashMap orderItemsMap = null;
 		Collection orderItemsCollection = new HashSet();
-		List newSpecimenArrayObjList=null;
+		List newSpecimenArrayObjList = null;
 
-		if(abstractActionForm.getPageOf().equals(Constants.SPECIMEN_ORDER_FORM_TYPE))
+		if (abstractActionForm.getPageOf().equals(Constants.SPECIMEN_ORDER_FORM_TYPE))
 		{
 			final OrderSpecimenForm orderSpecimenForm = (OrderSpecimenForm) abstractActionForm;
-			orderItemsMap=(HashMap)putOrderDetailsForSpecimen(orderSpecimenForm);
-			newSpecimenArrayObjList=(List)putnewArrayDetailsforArray(orderSpecimenForm.getDefineArrayObj());
+			orderItemsMap = (HashMap) putOrderDetailsForSpecimen(orderSpecimenForm);
+			newSpecimenArrayObjList = (List) putnewArrayDetailsforArray(
+					orderSpecimenForm.getDefineArrayObj());
 		}
-		
-		if(abstractActionForm.getPageOf().equals(Constants.ARRAY_ORDER_FORM_TYPE))
+
+		if (abstractActionForm.getPageOf().equals(Constants.ARRAY_ORDER_FORM_TYPE))
 		{
-			final OrderBiospecimenArrayForm orderBiospecimenArrayForm = (OrderBiospecimenArrayForm) abstractActionForm;
-			orderItemsMap=(HashMap)putOrderDetailsForArray(orderBiospecimenArrayForm);
-			newSpecimenArrayObjList=(List)putnewArrayDetailsforArray(orderBiospecimenArrayForm.getDefineArrayObj());
-			
+			final OrderBiospecimenArrayForm orderBiospecimenArrayForm =
+				(OrderBiospecimenArrayForm) abstractActionForm;
+			orderItemsMap = (HashMap) putOrderDetailsForArray(orderBiospecimenArrayForm);
+			newSpecimenArrayObjList = (List) putnewArrayDetailsforArray(
+					orderBiospecimenArrayForm.getDefineArrayObj());
+
 		}
-		if(abstractActionForm.getPageOf().equals(Constants.PATHOLOGYCASE_ORDER_FORM_TYPE))
+		if (abstractActionForm.getPageOf().equals(Constants.PATHOLOGYCASE_ORDER_FORM_TYPE))
 		{
-			final OrderPathologyCaseForm orderPathologyCaseForm = (OrderPathologyCaseForm) abstractActionForm;
-			orderItemsMap=(HashMap)putOrderDetailsForPathologyCase(orderPathologyCaseForm);
-			newSpecimenArrayObjList=(List)putnewArrayDetailsforArray(orderPathologyCaseForm.getDefineArrayObj());
+			final OrderPathologyCaseForm orderPathologyCaseForm =
+				(OrderPathologyCaseForm) abstractActionForm;
+			orderItemsMap = (HashMap) putOrderDetailsForPathologyCase(orderPathologyCaseForm);
+			newSpecimenArrayObjList = (List) putnewArrayDetailsforArray(
+					orderPathologyCaseForm.getDefineArrayObj());
 		}
-		//Obtain orderItemCollection .
+		//Obtain orderItemCollection.
 		final MapDataParser parser = new MapDataParser("edu.wustl.catissuecore.bean");
 		try
 		{
-			orderItemsCollection = (HashSet)parser.generateData(orderItemsMap);
+			orderItemsCollection = (HashSet) parser.generateData(orderItemsMap);
 		}
 		catch (Exception e)
 		{
-			Logger.out.debug("" + e);
+			logger.debug(e);
 		}
 
 		Collection orderItemsSet = new HashSet();
-		
+
 		Iterator orderItemsCollectionItr = orderItemsCollection.iterator();
-		OrderItem orderItem =null;
-		SpecimenOrderItem  specimenOrderItem=null;
-		
-		while(orderItemsCollectionItr.hasNext())
+		OrderItem orderItem = null;
+		SpecimenOrderItem specimenOrderItem = null;
+
+		while (orderItemsCollectionItr.hasNext())
 		{
 			OrderSpecimenBean orderSpecimenBean = (OrderSpecimenBean) orderItemsCollectionItr.next();
 			Double reqQty = new Double(0);
-			if(orderSpecimenBean.getTypeOfItem().equals("specimen"))
+			if (orderSpecimenBean.getTypeOfItem().equals("specimen"))
 			{
-				specimenOrderItem = (SpecimenOrderItem)setBioSpecimen(orderSpecimenBean);
-				if(orderSpecimenBean.getArrayName().equals("None"))
+				specimenOrderItem = (SpecimenOrderItem) setBioSpecimen(orderSpecimenBean);
+				if (orderSpecimenBean.getArrayName().equals("None"))
 				{
-					orderItem=specimenOrderItem;
+					orderItem = specimenOrderItem;
 					orderItemsSet.add(orderItem);
 				}
 				else
 				{
-					if(newSpecimenArrayObjList!=null)
+					if (newSpecimenArrayObjList != null)
 					{
-						Iterator it = newSpecimenArrayObjList.iterator();
-						while(it.hasNext())
+						Iterator iteratorNewSpecimen = newSpecimenArrayObjList.iterator();
+						while (iteratorNewSpecimen.hasNext())
 						{
-							NewSpecimenArrayOrderItem newSpecimenArrayObj=(NewSpecimenArrayOrderItem)it.next();
-							if(newSpecimenArrayObj.getName().equals(orderSpecimenBean.getArrayName()))
+							NewSpecimenArrayOrderItem newSpecimenArrayObj = (NewSpecimenArrayOrderItem) iteratorNewSpecimen.next();
+							if (newSpecimenArrayObj.getName().equals(orderSpecimenBean.getArrayName()))
 							{
-								Collection orderItemCollection = (Set)newSpecimenArrayObj.getSpecimenOrderItemCollection();
-								
-								if(orderItemCollection == null)
+								Collection orderItemCollection = (Set) newSpecimenArrayObj.getSpecimenOrderItemCollection();
+								if (orderItemCollection == null)
 								{
 									orderItemCollection = new HashSet();
 								}
-								specimenOrderItem.setNewSpecimenArrayOrderItem(newSpecimenArrayObj);								
+								specimenOrderItem.setNewSpecimenArrayOrderItem(newSpecimenArrayObj);
 								orderItem = specimenOrderItem;
 								//Test Line
 								orderItemsSet.add(orderItem);
@@ -379,33 +393,33 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 					}
 				}
 			}
-			
-			if(orderSpecimenBean.getTypeOfItem().equals("pathologyCase"))
+
+			if (Constants.PATHOLOGYCASE_ORDER_FORM_TYPE.equals(orderSpecimenBean.getTypeOfItem()))
 			{
-				specimenOrderItem = (SpecimenOrderItem)setPathologyCase(orderSpecimenBean);
-				if(orderSpecimenBean.getArrayName().equals("None"))
+				specimenOrderItem = (SpecimenOrderItem) setPathologyCase(orderSpecimenBean);
+				if (Constants.NONE.equals(orderSpecimenBean.getArrayName()))
 				{
-					orderItem=specimenOrderItem;
+					orderItem = specimenOrderItem;
 					orderItemsSet.add(orderItem);
 				}
 				else
 				{
-					if(newSpecimenArrayObjList!=null)
+					if (newSpecimenArrayObjList != null)
 					{
-						Iterator it = newSpecimenArrayObjList.iterator();
-						while(it.hasNext())
+						Iterator iteratorNewSpecArrObj = newSpecimenArrayObjList.iterator();
+						while (iteratorNewSpecArrObj.hasNext())
 						{
-							NewSpecimenArrayOrderItem newSpecimenArrayObj=(NewSpecimenArrayOrderItem)it.next();
-							if(newSpecimenArrayObj.getName().equals(orderSpecimenBean.getArrayName()))
+							NewSpecimenArrayOrderItem newSpecimenArrayObj = (NewSpecimenArrayOrderItem) iteratorNewSpecArrObj.next();
+							if (newSpecimenArrayObj.getName().equals(orderSpecimenBean.getArrayName()))
 							{
-								Collection orderItemCollection=(Set)newSpecimenArrayObj.getSpecimenOrderItemCollection();
-								if(orderItemCollection==null)
+								Collection orderItemCollection = (Set) newSpecimenArrayObj.getSpecimenOrderItemCollection();
+								if (orderItemCollection == null)
 								{
-									orderItemCollection=new HashSet();
+									orderItemCollection = new HashSet();
 								}
 								specimenOrderItem.setNewSpecimenArrayOrderItem(newSpecimenArrayObj);
-								orderItem=specimenOrderItem;
-//								Test Line
+								orderItem = specimenOrderItem;
+								//Test Line
 								orderItemsSet.add(orderItem);
 								orderItemCollection.add(orderItem);
 								newSpecimenArrayObj.setSpecimenOrderItemCollection(orderItemCollection);
@@ -414,10 +428,12 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 					}
 				}
 			}
-			if(orderSpecimenBean.getTypeOfItem().equals("specimenArray"))
+			if (Constants.ARRAY_ORDER_FORM_TYPE.equals(orderSpecimenBean.getTypeOfItem()))
 			{
-				orderItem=getOrderArrayItem(orderSpecimenBean,orderItem);
-				if((orderSpecimenBean.getTypeOfItem().equals("specimenArray"))&&(orderSpecimenBean.getSpecimenClass().equals("Tissue"))&& (orderSpecimenBean.getSpecimenType().equals("unblock")))
+				orderItem = getOrderArrayItem(orderSpecimenBean, orderItem);
+				if ((Constants.ARRAY_ORDER_FORM_TYPE.equals(orderSpecimenBean.getTypeOfItem())) &&
+						(Constants.TISSUE.equals(orderSpecimenBean.getSpecimenClass()))
+						&& (orderSpecimenBean.getSpecimenType().equals("unblock")))
 				{
 					reqQty = new Double(1);
 				}
@@ -427,42 +443,41 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 				}
 				orderItem.setRequestedQuantity(reqQty);
 				orderItem.setDescription(orderSpecimenBean.getDescription());
-				orderItem.setStatus("New");
+				orderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 				orderItemsSet.add(orderItem);
-
 			}
 		}//End While
-		
-		if(newSpecimenArrayObjList!=null)
+
+		if (newSpecimenArrayObjList != null)
 		{
-			Iterator it = newSpecimenArrayObjList.iterator();
-			while(it.hasNext())
+			Iterator iteratorNewSpecObj = newSpecimenArrayObjList.iterator();
+			while (iteratorNewSpecObj.hasNext())
 			{
-				orderItem=(NewSpecimenArrayOrderItem)it.next();
-				orderItem.setStatus("New");
+				orderItem = (NewSpecimenArrayOrderItem) iteratorNewSpecObj.next();
+				orderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 				orderItemsSet.add(orderItem);
-			}	
-		}	
+			}
+		}
 		this.setOrderItemCollection(orderItemsSet);
 	}
-	
+
 	/**
-	 * Thsi function sets the Bio Specimen Order Item
+	 * This function sets the Bio Specimen Order Item.
 	 * @param orderSpecimenBean object
 	 * @return specimenOrderItem SpecimenOrderItem instance
 	 */
 	private SpecimenOrderItem setBioSpecimen(OrderSpecimenBean orderSpecimenBean)
 	{
-		SpecimenOrderItem  specimenOrderItem = null;
+		SpecimenOrderItem specimenOrderItem = null;
 		Double reqQty = new Double(0);
-		
-		if (orderSpecimenBean.getIsDerived().equals("false")) // Existing specimen.
+
+		if (Constants.FALSE.equals(orderSpecimenBean.getIsDerived())) //Existing specimen.
 		{
 			specimenOrderItem = setExistingSpecimenOrderItem(orderSpecimenBean);
 			reqQty = new Double(orderSpecimenBean.getRequestedQuantity());
 			specimenOrderItem.setRequestedQuantity(reqQty);
 			specimenOrderItem.setDescription(orderSpecimenBean.getDescription());
-			specimenOrderItem.setStatus("New");
+			specimenOrderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		}
 		else //Derived specimen.
 		{
@@ -470,76 +485,76 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 			reqQty = new Double(orderSpecimenBean.getRequestedQuantity());
 			specimenOrderItem.setRequestedQuantity(reqQty);
 			specimenOrderItem.setDescription(orderSpecimenBean.getDescription());
-			specimenOrderItem.setStatus("New");
+			specimenOrderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		}
 		return specimenOrderItem;
 	}
-	
+
 	/**
-	 * This function sets the pathology case order item
-	 * @param orderSpecimenBean object 
+	 * This function sets the pathology case order item.
+	 * @param orderSpecimenBean object
 	 * @return specimenOrderItem SpecimenOrderItem instance
 	 */
 	private SpecimenOrderItem setPathologyCase(OrderSpecimenBean orderSpecimenBean)
 	{
-		SpecimenOrderItem  specimenOrderItem=null;
+		SpecimenOrderItem specimenOrderItem = null;
 		Double reqQty = new Double(0);
-		
-		if (orderSpecimenBean.getIsDerived().equals("false")) // Existing specimen.
+
+		if (Constants.FALSE.equals(orderSpecimenBean.getIsDerived())) //Existing specimen.
 		{
 			specimenOrderItem = setExistingOrderItemForPathology(orderSpecimenBean);
 			reqQty = new Double(orderSpecimenBean.getRequestedQuantity());
 			specimenOrderItem.setRequestedQuantity(reqQty);
 			specimenOrderItem.setDescription(orderSpecimenBean.getDescription());
-			specimenOrderItem.setStatus("New");
+			specimenOrderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		}
-		else 
+		else
 		{
 			specimenOrderItem = setDerivedOrderItemForPathology(orderSpecimenBean);
 			reqQty = new Double(orderSpecimenBean.getRequestedQuantity());
 			specimenOrderItem.setRequestedQuantity(reqQty);
 			specimenOrderItem.setDescription(orderSpecimenBean.getDescription());
-			specimenOrderItem.setStatus("New");
+			specimenOrderItem.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		}
 		return specimenOrderItem;
 	}
-	
+
 	/**
-	 * This funciton sets the existingSpecimen orderitem with the values from OrderSpecimenBean
+	 * This function sets the existingSpecimen order item with the values from OrderSpecimenBean.
 	 * @param orderSpecimenBean object
 	 * @return ExistingSpecimenOrderItem object
 	 */
 	private ExistingSpecimenOrderItem setExistingSpecimenOrderItem(OrderSpecimenBean orderSpecimenBean)
 	{
 		ExistingSpecimenOrderItem existingOrderItem = new ExistingSpecimenOrderItem();
-		//Set Parent specimen 
-		Specimen specimen=new Specimen();
-		specimen.setId(new Long(orderSpecimenBean.getSpecimenId()));
+		//Set Parent specimen
+		Specimen specimen = new Specimen();
+		specimen.setId(Long.valueOf(orderSpecimenBean.getSpecimenId()));
 		existingOrderItem.setSpecimen(specimen);
-		
+
 		return existingOrderItem;
 	}
-	
+
 	/**
-	 * This funciton sets the derivedspecimen orderitem with the values from OrderSpecimenBean
+	 * This funciton sets the derivedspecimen orderitem with the values from OrderSpecimenBean.
 	 * @param orderSpecimenBean object
 	 * @return derivedSpecimenOrderItem DerivedSpecimenOrderItem object
 	 */
 	private DerivedSpecimenOrderItem setDerivedSpecimenOrderItem(OrderSpecimenBean orderSpecimenBean)
 	{
 		DerivedSpecimenOrderItem derivedSpecimenOrderItem = new DerivedSpecimenOrderItem();
-		//Set Parent specimen 
-		Specimen specimen=new Specimen();
-		specimen.setId(new Long(orderSpecimenBean.getSpecimenId()));
+		//Set Parent specimen
+		Specimen specimen = new Specimen();
+		specimen.setId(Long.valueOf(orderSpecimenBean.getSpecimenId()));
 		derivedSpecimenOrderItem.setParentSpecimen(specimen);
 		derivedSpecimenOrderItem.setSpecimenClass(orderSpecimenBean.getSpecimenClass());
 		derivedSpecimenOrderItem.setSpecimenType(orderSpecimenBean.getSpecimenType());
-		
+
 		return derivedSpecimenOrderItem;
 	}
-	
+
 	/**
-	 * This function sets the Existing order Item for Pathology Case
+	 * This function sets the Existing order Item for Pathology Case.
 	 * @param orderSpecimenBean OrderSpecimenBean Object
 	 * @return existingOrderItem PathologicalCaseOrderItem Object
 	 */
@@ -550,228 +565,246 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		existingOrderItem.setPathologicalStatus(orderSpecimenBean.getPathologicalStatus());
 		existingOrderItem.setSpecimenClass(orderSpecimenBean.getSpecimenClass());
 		existingOrderItem.setSpecimenType(orderSpecimenBean.getSpecimenType());
-		SpecimenCollectionGroup specimenCollGroup=new SpecimenCollectionGroup();
-		specimenCollGroup.setId(new Long(orderSpecimenBean.getSpecimenCollectionGroup()));
+		SpecimenCollectionGroup specimenCollGroup = new SpecimenCollectionGroup();
+		specimenCollGroup.setId(Long.valueOf(orderSpecimenBean.getSpecimenCollectionGroup()));
 		existingOrderItem.setSpecimenCollectionGroup(specimenCollGroup);
-		
+
 		return existingOrderItem;
 	}
-	
+
 	/**
-	 * This funciton sets the Derived Order item for Pathology Case
+	 * This function sets the Derived Order item for Pathology Case.
 	 * @param orderSpecimenBean OrderSpecimenBean Object
 	 * @return derivedOrderItem PathologicalCaseOrderItem Object
 	 */
 	private PathologicalCaseOrderItem setDerivedOrderItemForPathology(OrderSpecimenBean orderSpecimenBean)
 	{
 		PathologicalCaseOrderItem derivedOrderItem = new PathologicalCaseOrderItem();
-	    derivedOrderItem.setTissueSite(orderSpecimenBean.getTissueSite());
-	    derivedOrderItem.setPathologicalStatus(orderSpecimenBean.getPathologicalStatus());
-	    derivedOrderItem.setSpecimenClass(orderSpecimenBean.getSpecimenClass());
-	    derivedOrderItem.setSpecimenType(orderSpecimenBean.getSpecimenType());
-		SpecimenCollectionGroup specimenCollGroup=new SpecimenCollectionGroup();
-		specimenCollGroup.setId(new Long(orderSpecimenBean.getSpecimenCollectionGroup()));
+		derivedOrderItem.setTissueSite(orderSpecimenBean.getTissueSite());
+		derivedOrderItem.setPathologicalStatus(orderSpecimenBean.getPathologicalStatus());
+		derivedOrderItem.setSpecimenClass(orderSpecimenBean.getSpecimenClass());
+		derivedOrderItem.setSpecimenType(orderSpecimenBean.getSpecimenType());
+		SpecimenCollectionGroup specimenCollGroup = new SpecimenCollectionGroup();
+		specimenCollGroup.setId(Long.valueOf(orderSpecimenBean.getSpecimenCollectionGroup()));
 		derivedOrderItem.setSpecimenCollectionGroup(specimenCollGroup);
-		
+
 		return derivedOrderItem;
 	}
-	
+
 	/**
 	 * @param orderBiospecimenArrayForm object
 	 * @return HashMap object
 	 */
-	private HashMap putOrderDetailsForArray(OrderBiospecimenArrayForm orderBiospecimenArrayForm)
+	private Map putOrderDetailsForArray(OrderBiospecimenArrayForm orderBiospecimenArrayForm)
 	{
-		HashMap orderItemsMap=null;
-		
+		HashMap orderItemsMap = null;
+
 		this.setComment(orderBiospecimenArrayForm.getOrderForm().getComments());
 		this.setName(orderBiospecimenArrayForm.getOrderForm().getOrderRequestName());
-		this.setStatus("New");
+		this.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		this.setRequestedDate(new Date());
-		Long distributionProtocolId = new Long(orderBiospecimenArrayForm.getOrderForm().getDistributionProtocol());
+		Long distributionProtocolId = Long.valueOf(orderBiospecimenArrayForm.getOrderForm().
+				getDistributionProtocol());
 
 		DistributionProtocol distributionProtocolObj = new DistributionProtocol();
 		distributionProtocolObj.setId(distributionProtocolId);
-			
+
 		this.setDistributionProtocol(distributionProtocolObj);
 		orderItemsMap = (HashMap) orderBiospecimenArrayForm.getValues();
 		return orderItemsMap;
 	}
-	
+
 	/**
 	 * @param orderSpecimenForm object
 	 * @return HashMap object
 	 */
-	private HashMap putOrderDetailsForSpecimen(OrderSpecimenForm orderSpecimenForm)
+	private Map putOrderDetailsForSpecimen(OrderSpecimenForm orderSpecimenForm)
 	{
-		HashMap orderItemsMap=null;
+		HashMap orderItemsMap = null;
 		//IBizLogic defaultBizLogic = BizLogicFactory.getInstance().getBizLogic(-1);
 		this.setComment(orderSpecimenForm.getOrderForm().getComments());
 		this.setName(orderSpecimenForm.getOrderForm().getOrderRequestName());
-		this.setStatus("New");
+		this.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		this.setRequestedDate(new Date());
-		Long distributionProtocolId = new Long(orderSpecimenForm.getOrderForm().getDistributionProtocol());
+		Long distributionProtocolId = Long.valueOf(orderSpecimenForm.getOrderForm().
+				getDistributionProtocol());
 
 		DistributionProtocol distributionProtocolObj = new DistributionProtocol();
 		distributionProtocolObj.setId(distributionProtocolId);
 		this.setDistributionProtocol(distributionProtocolObj);
-		
+
 		orderItemsMap = (HashMap) orderSpecimenForm.getValues();
 		return orderItemsMap;
 	}
-	
+
 	/**
 	 * @param orderPathologyCaseForm object
 	 * @return HashMap object
 	 */
-	private HashMap putOrderDetailsForPathologyCase(OrderPathologyCaseForm orderPathologyCaseForm)
+	private Map putOrderDetailsForPathologyCase(OrderPathologyCaseForm orderPathologyCaseForm)
 	{
-		HashMap orderItemsMap=null;
-		
+		HashMap orderItemsMap = null;
+
 		this.setComment(orderPathologyCaseForm.getOrderForm().getComments());
 		this.setName(orderPathologyCaseForm.getOrderForm().getOrderRequestName());
-		this.setStatus("New");
+		this.setStatus(Constants.ORDER_REQUEST_STATUS_NEW);
 		this.setRequestedDate(new Date());
-		Long distributionProtocolId = new Long(orderPathologyCaseForm.getOrderForm().getDistributionProtocol());
+		Long distributionProtocolId = Long.valueOf(orderPathologyCaseForm.getOrderForm().
+				getDistributionProtocol());
 
 		DistributionProtocol distributionProtocolObj = new DistributionProtocol();
 		distributionProtocolObj.setId(distributionProtocolId);
-			
+
 		this.setDistributionProtocol(distributionProtocolObj);
 		orderItemsMap = (HashMap) orderPathologyCaseForm.getValues();
 		return orderItemsMap;
 	}
-	
+
 	/**
 	 * @param orderSpecimenBean object
 	 * @param orderItem object
 	 * @return OrderItem object
 	 */
-	private OrderItem getOrderArrayItem(OrderSpecimenBean orderSpecimenBean,OrderItem orderItem)
+	private OrderItem getOrderArrayItem(OrderSpecimenBean orderSpecimenBean, OrderItem orderItem)
 	{
 		SpecimenArray specimenArray = new SpecimenArray();
-		specimenArray.setId(new Long(orderSpecimenBean.getSpecimenId()));
-		
-		ExistingSpecimenArrayOrderItem existingSpecimenArrayOrderItem = new ExistingSpecimenArrayOrderItem();
+		specimenArray.setId(Long.valueOf(orderSpecimenBean.getSpecimenId()));
+
+		ExistingSpecimenArrayOrderItem existingSpecimenArrayOrderItem =
+			new ExistingSpecimenArrayOrderItem();
 		existingSpecimenArrayOrderItem.setSpecimenArray(specimenArray);
 		orderItem = existingSpecimenArrayOrderItem;
 		existingSpecimenArrayOrderItem = null;
-			
+
 		return orderItem;
 	}
-	
+
 	/**
 	 * @param newArrayOrderItems object
 	 * @return List object
 	 */
 	private List putnewArrayDetailsforArray(List newArrayOrderItems)
 	{
-		List newOrderItems=null;
-		if(newArrayOrderItems!=null)
+		List newOrderItems = null;
+		if (newArrayOrderItems != null)
 		{
-			newOrderItems=new ArrayList();
+			newOrderItems = new ArrayList();
 			Iterator orderArrayItemsCollectionItr = newArrayOrderItems.iterator();
-			
-			while(orderArrayItemsCollectionItr.hasNext())
+
+			while (orderArrayItemsCollectionItr.hasNext())
 			{
-				DefineArrayForm defineArrayObj=(DefineArrayForm)orderArrayItemsCollectionItr.next();
-				NewSpecimenArrayOrderItem newSpecimenArrayOrderItem=new NewSpecimenArrayOrderItem();
+				DefineArrayForm defineArrayObj = (DefineArrayForm)
+					orderArrayItemsCollectionItr.next();
+				NewSpecimenArrayOrderItem newSpecimenArrayOrderItem =
+					new NewSpecimenArrayOrderItem();
 				newSpecimenArrayOrderItem.setName(defineArrayObj.getArrayName());
-	
-				SpecimenArrayType specimenArrayTypeObj=new SpecimenArrayType();
-				
+
+				SpecimenArrayType specimenArrayTypeObj = new SpecimenArrayType();
+
 				//specimenArrayTypeObj.setName(defineArrayObj.getArraytype());
-				specimenArrayTypeObj.setId(new Long(defineArrayObj.getArraytype()));
+				specimenArrayTypeObj.setId(Long.valueOf(defineArrayObj.getArraytype()));
 				newSpecimenArrayOrderItem.setSpecimenArrayType(specimenArrayTypeObj);
 				newOrderItems.add(newSpecimenArrayOrderItem);
 			}
 		}
-		return 	newOrderItems;
-
+		return newOrderItems;
 	}
-	
+
 	/**
-	 * 
+	 * Update the Order Details.
 	 * @param abstractActionForm object.
 	 */
 	private void updateOrderDetails(AbstractActionForm abstractActionForm)
 	{
-		RequestDetailsForm requestDetailsForm = (RequestDetailsForm)abstractActionForm;
-		if(requestDetailsForm.getMailNotification() != null && requestDetailsForm.getMailNotification().booleanValue() == true){
+		RequestDetailsForm requestDetailsForm = (RequestDetailsForm) abstractActionForm;
+		if (requestDetailsForm.getMailNotification() != null &&
+				requestDetailsForm.getMailNotification().booleanValue() == Boolean.TRUE)
+		{
 			this.mailNotification = requestDetailsForm.getMailNotification();
 		}
 		//Setting Comments in Order Domain Obj.
 		this.setComment(requestDetailsForm.getAdministratorComments());
 		//Setting the order Id.
-		Long orderId = new Long(requestDetailsForm.getId());
-		this.setId(orderId); 
-		
+		Long orderId = Long.valueOf(requestDetailsForm.getId());
+		this.setId(orderId);
+
 		Collection beanObjSet = parseValuesMap(requestDetailsForm.getValues());
-		
 		Iterator iter = beanObjSet.iterator();
 		Collection<OrderItem> domainObjSet = new HashSet<OrderItem>();
 		Collection distributionObjectCollection = new HashSet();
-		Distribution distribution = new Distribution();	
+		Distribution distribution = new Distribution();
 		// set by pratha
 		distribution.setComment(requestDetailsForm.getAdministratorComments());
 		Collection<DistributedItem> distributedItemCollection = new HashSet<DistributedItem>();
-		while(iter.hasNext())
+		while (iter.hasNext())
 		{
 			//Setting the Order Id
 			OrderDetails order = setOrderId(orderId);
 			Object obj = iter.next();
 			//For specimen order item.
-			if(obj instanceof RequestDetailsBean)
+			if (obj instanceof RequestDetailsBean)
 			{
-				RequestDetailsBean requestDetailsBean = (RequestDetailsBean)obj;
-				 //For skipping iteration when status drop down is disabled.
-				if(requestDetailsBean.getAssignedStatus() == null || requestDetailsBean.getAssignedStatus().trim().equalsIgnoreCase(""))
+				RequestDetailsBean requestDetailsBean = (RequestDetailsBean) obj;
+				//For skipping iteration when status drop down is disabled.
+				if (requestDetailsBean.getAssignedStatus() == null || Constants.DOUBLE_QUOTES.
+						equalsIgnoreCase(requestDetailsBean.getAssignedStatus().trim()))
 				{
 					continue;
 				}
-				OrderItem orderItem = populateOrderItemForSpecimenOrderItems(requestDetailsBean,order,distributedItemCollection,distribution,requestDetailsForm,distributionObjectCollection);
+				OrderItem orderItem = populateOrderItemForSpecimenOrderItems(requestDetailsBean,
+						order, distributedItemCollection, distribution, requestDetailsForm,
+						distributionObjectCollection);
 				domainObjSet.add(orderItem);
 			}
 			//For defined array header object.
-			else if(obj instanceof DefinedArrayRequestBean)
+			else if (obj instanceof DefinedArrayRequestBean)
 			{
-				DefinedArrayRequestBean definedArrayRequestBean = (DefinedArrayRequestBean)obj;
+				DefinedArrayRequestBean definedArrayRequestBean = (DefinedArrayRequestBean) obj;
 				//For skipping iteration when status drop down is disabled.
-				if(definedArrayRequestBean.getAssignedStatus() == null || definedArrayRequestBean.getAssignedStatus().trim().equalsIgnoreCase(""))
+				if (definedArrayRequestBean.getAssignedStatus() == null || Constants.DOUBLE_QUOTES.
+					equalsIgnoreCase(definedArrayRequestBean.getAssignedStatus().trim()))
 				{
 					continue;
-				}	
-				OrderItem orderItem = populateOrderItemForArrayHeader(definedArrayRequestBean,order,distributedItemCollection,distribution,requestDetailsForm,distributionObjectCollection);
+				}
+				OrderItem orderItem = populateOrderItemForArrayHeader(definedArrayRequestBean,
+						order, distributedItemCollection, distribution,
+						requestDetailsForm, distributionObjectCollection);
 				domainObjSet.add(orderItem);
 			}
 			//For defined array details.
-			else if(obj instanceof DefinedArrayDetailsBean)
+			else if (obj instanceof DefinedArrayDetailsBean)
 			{
-				DefinedArrayDetailsBean definedArrayDetailsBean = (DefinedArrayDetailsBean)obj;
+				DefinedArrayDetailsBean definedArrayDetailsBean = (DefinedArrayDetailsBean) obj;
 				//For skipping iteration when status drop down is disabled.
-				if(definedArrayDetailsBean.getAssignedStatus() == null || definedArrayDetailsBean.getAssignedStatus().trim().equalsIgnoreCase(""))
+				if (definedArrayDetailsBean.getAssignedStatus() == null ||Constants.DOUBLE_QUOTES.
+					equalsIgnoreCase(definedArrayDetailsBean.getAssignedStatus().trim()))
 				{
 					continue;
 				}
-				OrderItem orderItem = setOrderForDefineArrayDetails(order,definedArrayDetailsBean);
+				OrderItem orderItem = setOrderForDefineArrayDetails(order,
+						definedArrayDetailsBean);
 				domainObjSet.add(orderItem);
 			}
 			//For Existing array order item.
-			else if(obj instanceof ExistingArrayDetailsBean)
+			else if (obj instanceof ExistingArrayDetailsBean)
 			{
-				ExistingArrayDetailsBean existingArrayDetailsBean = (ExistingArrayDetailsBean)obj;
+				ExistingArrayDetailsBean existingArrayDetailsBean = (ExistingArrayDetailsBean) obj;
 				// For skipping iteration when status drop down is disabled.
-				if(existingArrayDetailsBean.getAssignedStatus() == null || existingArrayDetailsBean.getAssignedStatus().trim().equalsIgnoreCase(""))
+				if (existingArrayDetailsBean.getAssignedStatus() == null ||Constants.DOUBLE_QUOTES.
+					equalsIgnoreCase(existingArrayDetailsBean.getAssignedStatus().trim()))
 				{
 					continue;
 				}
-				OrderItem orderItem = populateOrderItemForExistingArray(existingArrayDetailsBean,order,distributedItemCollection,distribution,requestDetailsForm,distributionObjectCollection);
+				OrderItem orderItem = populateOrderItemForExistingArray(existingArrayDetailsBean,
+						order, distributedItemCollection, distribution,
+						requestDetailsForm, distributionObjectCollection);
 				domainObjSet.add(orderItem);
 			}
 		}
-		this.setDistributionCollection(distributionObjectCollection);		
-		this.setOrderItemCollection(domainObjSet);	
+		this.setDistributionCollection(distributionObjectCollection);
+		this.setOrderItemCollection(domainObjSet);
 	}
+
 	/**
 	 * @param orderItem object
 	 * @param distributedItem object
@@ -779,26 +812,28 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	 * @param distributedItemCollection object
 	 * @return Distribution object
 	 */
-	private Distribution setDistributedItemCollectionInDistribution(OrderItem orderItem,DistributedItem distributedItem,Distribution distribution,Collection<DistributedItem> distributedItemCollection)
+	private Distribution setDistributedItemCollectionInDistribution(OrderItem orderItem,
+			DistributedItem distributedItem, Distribution distribution,
+			Collection<DistributedItem> distributedItemCollection)
 	{
 		orderItem.setDistributedItem(distributedItem);
 		distributedItemCollection.add(distributedItem);
 		distribution.setDistributedItemCollection(distributedItemCollection);
 		return distribution;
 	}
-	
+
 	/**
 	 * @return the distributionCollection object
-	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.Distribution" cascade="save-update" lazy="false"
+	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.Distribution"
+	 * cascade="save-update" lazy="false"
 	 * @hibernate.set name="distributionCollection" table="CATISSUE_DISTRIBUTION"
-	 * @hibernate.collection-key column="ORDER_ID" 
+	 * @hibernate.collection-key column="ORDER_ID"
 	 */
 	public Collection getDistributionCollection()
 	{
 		return distributionCollection;
 	}
 
-	
 	/**
 	 * @param distributionCollection the distributionCollection to set
 	 */
@@ -807,37 +842,39 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		this.distributionCollection = distributionCollection;
 	}
 
-	 /**
-     * Returns message label to display on success add or edit
-     * @return String object
-     */
+	/**
+	* Returns message label to display on success add or edit.
+	* @return String object
+	*/
 	public String getMessageLabel()
 	{
 		String messageLabel;
-		if(operationAdd)
+		if (operationAdd)
 		{
-			messageLabel = this.name ;
+			messageLabel = this.name;
 		}
 		else
 		{
-			int i = OrderBizLogic.numberItemsUpdated;
-			messageLabel = " "+i+" OrderItems.";
+			int numberItem = OrderBizLogic.numberItemsUpdated;
+			messageLabel = " " + numberItem + " OrderItems.";
 		}
 		return messageLabel;
 	}
+
 	/**
 	 * @param distribution object
 	 * @param requestDetailsForm object
 	 * @return Distribution object
 	 */
-	private Distribution setDistributionProtocolInDistribution(Distribution distribution,RequestDetailsForm requestDetailsForm)
+	private Distribution setDistributionProtocolInDistribution(Distribution distribution,
+			RequestDetailsForm requestDetailsForm)
 	{
 		DistributionProtocol distributionProtocol = new DistributionProtocol();
-		distributionProtocol.setId(new Long(requestDetailsForm.getDistributionProtocolId()));
+		distributionProtocol.setId(Long.valueOf(requestDetailsForm.getDistributionProtocolId()));
 		distribution.setDistributionProtocol(distributionProtocol);
 		return distribution;
 	}
-	
+
 	/**
 	 * @param requestDetailsBean object
 	 * @param order object
@@ -847,186 +884,196 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	 * @param distributionObjectCollection object
 	 * @return OrderItem object
 	 */
- private OrderItem populateOrderItemForSpecimenOrderItems(RequestDetailsBean requestDetailsBean, OrderDetails order,Collection distributedItemCollection,Distribution distribution,RequestDetailsForm requestDetailsForm,Collection distributionObjectCollection)
- {
-	
-	 OrderItem orderItem = new OrderItem(); 
+	private OrderItem populateOrderItemForSpecimenOrderItems(RequestDetailsBean
+			requestDetailsBean, OrderDetails order, Collection distributedItemCollection,
+			Distribution distribution, 	RequestDetailsForm requestDetailsForm,
+			Collection distributionObjectCollection)
+	{
 
-	 // modified by pratha for bug# 5663	and 7355
-	 DerivedSpecimenOrderItem derivedOrderItem = null;
-	 ExistingSpecimenOrderItem existingOrderItem = null;
-	 PathologicalCaseOrderItem pathologicalCaseOrderItem = null;
-	 OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
-		
-	 Specimen specimen = new Specimen();
-	 if(requestDetailsBean.getInstanceOf().trim().equalsIgnoreCase("Existing"))
-	 {   
-		 existingOrderItem =  new ExistingSpecimenOrderItem();
-		 specimen.setId(new Long(requestDetailsBean.getSpecimenId()));
-		 specimen.setLabel(requestDetailsBean.getRequestedItem());
-		 existingOrderItem.setSpecimen(specimen);
-		 orderItem = existingOrderItem;
-		
+		OrderItem orderItem = new OrderItem();
+		// modified by pratha for bug# 5663	and 7355
+		DerivedSpecimenOrderItem derivedOrderItem = null;
+		ExistingSpecimenOrderItem existingOrderItem = null;
+		PathologicalCaseOrderItem pathologicalCaseOrderItem = null;
+		OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().
+			getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
 
-	 }else if(requestDetailsBean.getInstanceOf().trim().equalsIgnoreCase("DerivedPathological") ||requestDetailsBean.getInstanceOf().trim().equalsIgnoreCase("Pathological") )
-	 {
-		 pathologicalCaseOrderItem =  new PathologicalCaseOrderItem();
-		 SpecimenCollectionGroup specimenCollectionGroup = (SpecimenCollectionGroup)orderBizLogic.retrieveSCG(Long.parseLong
-				 (requestDetailsBean.getSpecimenCollGroupId()));
-		 pathologicalCaseOrderItem.setSpecimenCollectionGroup(specimenCollectionGroup);
-		 pathologicalCaseOrderItem.setSpecimenClass(requestDetailsBean.getClassName());
-		 pathologicalCaseOrderItem.setSpecimenType(requestDetailsBean.getType());
-		 orderItem = pathologicalCaseOrderItem;
+		Specimen specimen = new Specimen();
+		if (requestDetailsBean.getInstanceOf().trim().equalsIgnoreCase("Existing"))
+		{
+			existingOrderItem = new ExistingSpecimenOrderItem();
+			specimen.setId(Long.valueOf(requestDetailsBean.getSpecimenId()));
+			specimen.setLabel(requestDetailsBean.getRequestedItem());
+			existingOrderItem.setSpecimen(specimen);
+			orderItem = existingOrderItem;
 
-	 }else {
+		}
+		else if ("DerivedPathological".equalsIgnoreCase(requestDetailsBean.getInstanceOf().trim())
+				|| "Pathological".equalsIgnoreCase(requestDetailsBean.getInstanceOf().trim()))
+		{
+			pathologicalCaseOrderItem = new PathologicalCaseOrderItem();
+			SpecimenCollectionGroup specimenCollectionGroup = (SpecimenCollectionGroup)
+				orderBizLogic.retrieveSCG(Long.parseLong(requestDetailsBean
+					.getSpecimenCollGroupId()));
+			pathologicalCaseOrderItem.setSpecimenCollectionGroup(specimenCollectionGroup);
+			pathologicalCaseOrderItem.setSpecimenClass(requestDetailsBean.getClassName());
+			pathologicalCaseOrderItem.setSpecimenType(requestDetailsBean.getType());
+			orderItem = pathologicalCaseOrderItem;
+		}
+		else
+		{
+			derivedOrderItem = new DerivedSpecimenOrderItem();
+			specimen.setId(Long.valueOf(requestDetailsBean.getSpecimenId()));
+			specimen.setLabel(requestDetailsBean.getRequestedItem());
+			derivedOrderItem.setParentSpecimen(specimen);
 
-		 derivedOrderItem = new DerivedSpecimenOrderItem();
-		 specimen.setId(new Long(requestDetailsBean.getSpecimenId()));
-		 specimen.setLabel(requestDetailsBean.getRequestedItem());
-		 derivedOrderItem.setParentSpecimen(specimen);
-		 
-		 derivedOrderItem.setSpecimenClass(requestDetailsBean.getClassName());
-		 derivedOrderItem.setSpecimenType(requestDetailsBean.getType());
-		 orderItem = derivedOrderItem;
+			derivedOrderItem.setSpecimenClass(requestDetailsBean.getClassName());
+			derivedOrderItem.setSpecimenType(requestDetailsBean.getType());
+			orderItem = derivedOrderItem;
+		}
 
-	 }
+		//For Distribution.
+		if ("Distributed".equalsIgnoreCase(requestDetailsBean.getAssignedStatus().trim())
+				&& Constants.DOUBLE_QUOTES.equals(requestDetailsBean.getDistributedItemId())
+				|| ("Distributed And Close".equalsIgnoreCase(requestDetailsBean.
+						getAssignedStatus().trim()) && Constants.DOUBLE_QUOTES.equals
+						(requestDetailsBean.getDistributedItemId())))
+		{
+			//Setting the Site for distribution.
+			distribution = setSiteInDistribution(distribution, requestDetailsForm);
+			DistributedItem distributedItem = new DistributedItem();
 
+			specimen.setId(Long.valueOf(requestDetailsBean.getRequestFor()));
 
-	 //For Distribution.
-	 if(requestDetailsBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed") && requestDetailsBean.getDistributedItemId().equals("")
-			 ||(requestDetailsBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed And Close") && requestDetailsBean.getDistributedItemId().equals("")))
-	 {	
-		 //Setting the Site for distribution.
-		 distribution = setSiteInDistribution(distribution,requestDetailsForm);		
-		 DistributedItem distributedItem = new DistributedItem();
-		
-		 specimen.setId(new Long(requestDetailsBean.getRequestFor()));
-		 
-		 distributedItem.setSpecimen(specimen);
-		 //For setting assigned quantity in Distribution.
-		 if(requestDetailsBean.getRequestedQty() != null && !requestDetailsBean.getRequestedQty().trim().equalsIgnoreCase(""))
-		 {
-			 distributedItem.setQuantity(new Double(requestDetailsBean.getRequestedQty()));
-		 }
+			distributedItem.setSpecimen(specimen);
+			//For setting assigned quantity in Distribution.
+			if (requestDetailsBean.getRequestedQty() != null && !Constants.DOUBLE_QUOTES.
+					equalsIgnoreCase(requestDetailsBean.getRequestedQty().trim()))
+			{
+				distributedItem.setQuantity(new Double(requestDetailsBean.getRequestedQty()));
+			}
 
-		 distribution = setDistributedItemCollectionInDistribution(orderItem,distributedItem,distribution,distributedItemCollection);
+			distribution = setDistributedItemCollectionInDistribution(orderItem, distributedItem,
+					distribution, distributedItemCollection);
 
-		 //Setting the distribution protocol in Distribution.
-		 distribution = setDistributionProtocolInDistribution(distribution,requestDetailsForm);
+			//Setting the distribution protocol in Distribution.
+			distribution = setDistributionProtocolInDistribution(distribution, requestDetailsForm);
 
-		 distributionObjectCollection.add(distribution);	
-	 }	
-	 //Updating Description and Status.
-	 orderItem.setId(new Long(requestDetailsBean.getOrderItemId()));
-	 orderItem.setStatus(requestDetailsBean.getAssignedStatus());
-	 orderItem.setDescription(requestDetailsBean.getDescription());
-	 //Setting the order id 
-	 orderItem.setOrderDetails(order);
+			distributionObjectCollection.add(distribution);
+		}
+		//Updating Description and Status.
+		orderItem.setId(Long.valueOf(requestDetailsBean.getOrderItemId()));
+		orderItem.setStatus(requestDetailsBean.getAssignedStatus());
+		orderItem.setDescription(requestDetailsBean.getDescription());
+		//Setting the order id
+		orderItem.setOrderDetails(order);
 
-	 return orderItem;
- }
- 
- /*private void updateExistingSpecimenOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
- {
+		return orderItem;
+	}
+
+	/*private void updateExistingSpecimenOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
+	{
 	 	existingOrderItem =  new ExistingSpecimenOrderItem();
 		specimen.setId(new Long(requestDetailsBean.getRequestFor()));
 		specimen.setLabel(requestDetailsBean.getRequestedItem());
 		existingOrderItem.setSpecimen(specimen);
 		orderItem = existingOrderItem;
- }
- 
- private void updateDerivedSpecimenOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
- {
-	 
- }
- 
- private void updatePathologicalCaseOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
- {
-	 
- }*/
- 
+	}
+
+	private void updateDerivedSpecimenOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
+	{
+
+	}
+
+	private void updatePathologicalCaseOrderItem(OrderItem orderItem,RequestDetailsBean requestDetailsBean)
+	{
+
+	}*/
 
 	/**
 	 * @param distribution object
 	 * @param requestDetailsForm object
 	 * @return Distribution object
 	 */
-	private Distribution setSiteInDistribution(Distribution distribution,RequestDetailsForm requestDetailsForm)
+	private Distribution setSiteInDistribution(Distribution distribution, RequestDetailsForm
+			requestDetailsForm)
 	{
 		Site toSite = new Site();
-		toSite.setId(new Long(requestDetailsForm.getSite()));
+		toSite.setId(Long.valueOf(requestDetailsForm.getSite()));
 		distribution.setToSite(toSite);
 		return distribution;
 	}
+
 	/**
 	 * @param order object
 	 * @param definedArrayDetailsBean object
 	 * @return OrderItem object
 	 */
-	 
-	private OrderItem  setOrderForDefineArrayDetails( OrderDetails order, DefinedArrayDetailsBean definedArrayDetailsBean)
+
+	private OrderItem setOrderForDefineArrayDetails(OrderDetails order, DefinedArrayDetailsBean
+			definedArrayDetailsBean)
 	{
-		OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
-		
+		OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().
+			getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
+
 		SpecimenOrderItem specOrderItem = null;
 		OrderItem orderItem = null;
 		ExistingSpecimenOrderItem existingSpecimenOrderItem = null;
 		DerivedSpecimenOrderItem derivedSpecimenOrderItem = null;
 		PathologicalCaseOrderItem pathologicalCaseOrderItem = null;
-		specOrderItem = (SpecimenOrderItem)orderBizLogic.retrieveSpecimenOrderItem(Long.parseLong(definedArrayDetailsBean.getOrderItemId()));
-		
-		if (specOrderItem instanceof ExistingSpecimenOrderItem) {
-		
-			existingSpecimenOrderItem = (ExistingSpecimenOrderItem)specOrderItem;
+		specOrderItem = (SpecimenOrderItem) orderBizLogic.retrieveSpecimenOrderItem(
+				Long.parseLong(definedArrayDetailsBean.getOrderItemId()));
+
+		if (specOrderItem instanceof ExistingSpecimenOrderItem)
+		{
+			existingSpecimenOrderItem = (ExistingSpecimenOrderItem) specOrderItem;
 			orderItem = existingSpecimenOrderItem;
-			
-		} else if (specOrderItem instanceof DerivedSpecimenOrderItem) {// For derived specimen.
-			
-			derivedSpecimenOrderItem = (DerivedSpecimenOrderItem)specOrderItem;
+		}
+		else if (specOrderItem instanceof DerivedSpecimenOrderItem)
+		{// For derived specimen.
+			derivedSpecimenOrderItem = (DerivedSpecimenOrderItem) specOrderItem;
 			orderItem = derivedSpecimenOrderItem;
-		}else {
-			pathologicalCaseOrderItem = (PathologicalCaseOrderItem)specOrderItem;
+		}
+		else
+		{
+			pathologicalCaseOrderItem = (PathologicalCaseOrderItem) specOrderItem;
 			orderItem = pathologicalCaseOrderItem;
 		}
-				
-	
-//		For READY FOR ARRAY PREPARATION
-		if(definedArrayDetailsBean.getAssignedStatus().trim().equalsIgnoreCase(Constants.ORDER_REQUEST_STATUS_READY_FOR_ARRAY_PREPARATION))
-		{					
-			DistributedItem distributedItem = new DistributedItem();			
+
+		//For READY FOR ARRAY PREPARATION
+		if (Constants.ORDER_REQUEST_STATUS_READY_FOR_ARRAY_PREPARATION.equalsIgnoreCase(
+				definedArrayDetailsBean.getAssignedStatus().trim()))
+		{
+			DistributedItem distributedItem = new DistributedItem();
 			Specimen specimen = new Specimen();
 
-				if(definedArrayDetailsBean.getRequestFor() == null || definedArrayDetailsBean.getRequestFor().trim().equalsIgnoreCase(""))
+			if (definedArrayDetailsBean.getRequestFor() == null || Constants.DOUBLE_QUOTES.
+					equalsIgnoreCase(definedArrayDetailsBean.getRequestFor().trim()))
+			{
+				// for existing Specimen.
+				if (definedArrayDetailsBean.getInstanceOf().trim().equalsIgnoreCase("Existing"))
 				{
-					// for existing Specimen.
-					if (definedArrayDetailsBean.getInstanceOf().trim()
-							.equalsIgnoreCase("Existing")) {
-						specimen.setId(new Long(definedArrayDetailsBean
-								.getSpecimenId()));
-						existingSpecimenOrderItem.setSpecimen(specimen);
-											
-					} else {// For derived specimen.
-						specimen.setId(new Long(definedArrayDetailsBean
-								.getRequestFor()));
-					}
-	
-					distributedItem.setSpecimen(specimen);
-					// Updating Description and Status.
-					// orderItem = newSpecimenArrayOrderItem;
-					orderItem.setStatus(definedArrayDetailsBean
-							.getAssignedStatus());
-					orderItem.setDescription(definedArrayDetailsBean
-							.getDescription());
-					// Setting the order id
-					orderItem.setOrderDetails(order);
-					orderItem.setDistributedItem(distributedItem);
-					
-			}	
-	  }
-	  return orderItem;
+					specimen.setId(Long.valueOf(definedArrayDetailsBean.getSpecimenId()));
+					existingSpecimenOrderItem.setSpecimen(specimen);
+				}
+				else
+				{// For derived specimen.
+					specimen.setId(Long.valueOf(definedArrayDetailsBean.getRequestFor()));
+				}
+
+				distributedItem.setSpecimen(specimen);
+				// Updating Description and Status.
+				// orderItem = newSpecimenArrayOrderItem;
+				orderItem.setStatus(definedArrayDetailsBean.getAssignedStatus());
+				orderItem.setDescription(definedArrayDetailsBean.getDescription());
+				// Setting the order id
+				orderItem.setOrderDetails(order);
+				orderItem.setDistributedItem(distributedItem);
+			}
+		}
+		return orderItem;
 	}
-	
-	
+
 	/**
 	 * @param orderId object
 	 * @return OrderDetails object
@@ -1036,11 +1083,10 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		OrderDetails order = new OrderDetails();
 		order.setId(orderId);
 		return order;
-		
 	}
-	
+
 	/**
-	 * @param definedArrayRequestBean object 
+	 * @param definedArrayRequestBean object
 	 * @param order object
 	 * @param distributedItemCollection object
 	 * @param distribution object
@@ -1048,44 +1094,51 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	 * @param distributionObjectCollection object
 	 * @return OrderItem object
 	 */
-  private OrderItem populateOrderItemForArrayHeader(DefinedArrayRequestBean definedArrayRequestBean,OrderDetails order,Collection distributedItemCollection,Distribution distribution,RequestDetailsForm requestDetailsForm,Collection distributionObjectCollection)
+	private OrderItem populateOrderItemForArrayHeader(DefinedArrayRequestBean definedArrayRequestBean,
+			OrderDetails order, Collection distributedItemCollection, Distribution distribution,
+			RequestDetailsForm requestDetailsForm, Collection distributionObjectCollection)
 	{
-	  	OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
-	  	NewSpecimenArrayOrderItem orderItem = (NewSpecimenArrayOrderItem)orderBizLogic.retrieveNewSpecimenArrayOrderItem(new Long(definedArrayRequestBean.getOrderItemId()));
-		    
+		OrderBizLogic orderBizLogic = (OrderBizLogic) BizLogicFactory.getInstance().
+			getBizLogic(Constants.REQUEST_LIST_FILTERATION_FORM_ID);
+		NewSpecimenArrayOrderItem orderItem = (NewSpecimenArrayOrderItem) orderBizLogic.
+			retrieveNewSpecimenArrayOrderItem(Long.valueOf(definedArrayRequestBean.getOrderItemId()));
+
 		//Updating Description and Status.
-		
-		orderItem.setStatus(definedArrayRequestBean.getAssignedStatus());						
-		//Setting the order id 
-		orderItem.setOrderDetails(order);	
-		
+		orderItem.setStatus(definedArrayRequestBean.getAssignedStatus());
+		//Setting the order id
+		orderItem.setOrderDetails(order);
+
 		//For Distribution.
-		if((definedArrayRequestBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed") ||definedArrayRequestBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed And Close"))&& definedArrayRequestBean.getDistributedItemId().equals(""))
-		{	
+		if (("Distributed".equalsIgnoreCase(definedArrayRequestBean.getAssignedStatus().trim()) ||
+		"Distributed And Close".equalsIgnoreCase(definedArrayRequestBean.getAssignedStatus().trim()))
+				&& Constants.DOUBLE_QUOTES.equals(definedArrayRequestBean.getDistributedItemId()))
+		{
 			//Setting the Site for distribution.
-			distribution = setSiteInDistribution(distribution,requestDetailsForm);
-			
+			distribution = setSiteInDistribution(distribution, requestDetailsForm);
+
 			DistributedItem distributedItem = new DistributedItem();
-			if(orderItem.getSpecimenArray()!=null && orderItem.getSpecimenArray().getId()!=null)
+			if (orderItem.getSpecimenArray() != null && orderItem.getSpecimenArray().getId() != null)
 			{
-				distributedItem.setSpecimenArray((SpecimenArray)orderItem.getSpecimenArray());
+				distributedItem.setSpecimenArray((SpecimenArray) orderItem.getSpecimenArray());
 			}
 			/*SpecimenArray specimenArray = new SpecimenArray();
-			if(definedArrayRequestBean.getArrayId() != null && !definedArrayRequestBean.getArrayId().trim().equalsIgnoreCase(""))
+			if(definedArrayRequestBean.getArrayId() != null && !definedArrayRequestBean.getArrayId().
+			trim().equalsIgnoreCase(""))
 			{
 				specimenArray.setId(new Long(definedArrayRequestBean.getArrayId()));
 			}
 			distributedItem.setSpecimenArray(specimenArray);*/
-	
+
 			//For setting assigned quantity in Distribution.
-	        distributedItem.setQuantity(new Double("1"));
-	        
-		    distribution = setDistributedItemCollectionInDistribution(orderItem,distributedItem,distribution,distributedItemCollection);
-			
+			distributedItem.setQuantity(new Double("1"));
+
+			distribution = setDistributedItemCollectionInDistribution(orderItem, distributedItem,
+					distribution, distributedItemCollection);
+
 			//Setting the distribution protocol in Distribution.
-			distribution = setDistributionProtocolInDistribution(distribution,requestDetailsForm);
-			
-			distributionObjectCollection.add(distribution);	
+			distribution = setDistributionProtocolInDistribution(distribution, requestDetailsForm);
+
+			distributionObjectCollection.add(distribution);
 		}
 		return orderItem;
 	}
@@ -1099,53 +1152,56 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	 * @param distributionObjectCollection object
 	 * @return OrderItem object
 	 */
-  private OrderItem populateOrderItemForExistingArray(ExistingArrayDetailsBean existingArrayDetailsBean, OrderDetails order,Collection distributedItemCollection,Distribution distribution,RequestDetailsForm requestDetailsForm,Collection distributionObjectCollection)
+	private OrderItem populateOrderItemForExistingArray(ExistingArrayDetailsBean existingArrayDetailsBean,
+			OrderDetails order, Collection distributedItemCollection, Distribution distribution,
+			RequestDetailsForm requestDetailsForm, Collection distributionObjectCollection)
 	{
 		ExistingSpecimenArrayOrderItem existingSpecArrOrderItem = new ExistingSpecimenArrayOrderItem();
 		//Updating Description and Status.
 
-		existingSpecArrOrderItem.setId(new Long(existingArrayDetailsBean.getOrderItemId()));
+		existingSpecArrOrderItem.setId(Long.valueOf(existingArrayDetailsBean.getOrderItemId()));
 		existingSpecArrOrderItem.setStatus(existingArrayDetailsBean.getAssignedStatus());
-		existingSpecArrOrderItem.setDescription(existingArrayDetailsBean.getAddDescription());		
+		existingSpecArrOrderItem.setDescription(existingArrayDetailsBean.getAddDescription());
 		SpecimenArray specimenArray = new SpecimenArray();
-		if(existingArrayDetailsBean.getArrayId() != null && !existingArrayDetailsBean.getArrayId().trim().equalsIgnoreCase(""))
+		if (existingArrayDetailsBean.getArrayId() != null &&
+			!Constants.DOUBLE_QUOTES.equalsIgnoreCase(existingArrayDetailsBean.getArrayId().trim()))
 		{
-			specimenArray.setId(new Long(existingArrayDetailsBean.getArrayId()));
+			specimenArray.setId(Long.valueOf(existingArrayDetailsBean.getArrayId()));
 		}
 		specimenArray.setName(existingArrayDetailsBean.getBioSpecimenArrayName());
 		existingSpecArrOrderItem.setSpecimenArray(specimenArray);
-		//Setting the order id 
+		//Setting the order id
 		existingSpecArrOrderItem.setOrderDetails(order);
-		
+
 		//For Distribution.
-		if((existingArrayDetailsBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed")||existingArrayDetailsBean.getAssignedStatus().trim().equalsIgnoreCase("Distributed And Close")) && existingArrayDetailsBean.getDistributedItemId().equals(""))
-		{	
+		if (("Distributed".equalsIgnoreCase(existingArrayDetailsBean.getAssignedStatus().trim()) ||
+		"Distributed And Close".equalsIgnoreCase(existingArrayDetailsBean.getAssignedStatus().trim()))
+				&& Constants.DOUBLE_QUOTES.equals(existingArrayDetailsBean.getDistributedItemId()))
+		{
 			//Setting the Site for distribution.
-			distribution = setSiteInDistribution(distribution,requestDetailsForm);
-		    //Making distributed items
-			DistributedItem distributedItem = new DistributedItem();			
+			distribution = setSiteInDistribution(distribution, requestDetailsForm);
+			//Making distributed items
+			DistributedItem distributedItem = new DistributedItem();
 			distributedItem.setSpecimenArray(specimenArray);
-			
-			if(existingArrayDetailsBean.getRequestedQuantity().equals("0.0"))
+
+			if (existingArrayDetailsBean.getRequestedQuantity().equals("0.0"))
 			{
 				distributedItem.setQuantity(new Double("1"));
 			}
 			else
 			{
-				distributedItem.setQuantity(new Double(existingArrayDetailsBean.getRequestedQuantity()));
+				distributedItem.setQuantity(new Double(existingArrayDetailsBean.
+						getRequestedQuantity()));
 			}
-			distribution = setDistributedItemCollectionInDistribution(existingSpecArrOrderItem,distributedItem,distribution,distributedItemCollection);
-		    //Setting the distribution protocol in Distribution.
-			distribution = setDistributionProtocolInDistribution(distribution,requestDetailsForm);
-			
-			distributionObjectCollection.add(distribution);	
-			
+			distribution = setDistributedItemCollectionInDistribution(existingSpecArrOrderItem,
+					distributedItem, distribution, distributedItemCollection);
+			//Setting the distribution protocol in Distribution.
+			distribution = setDistributionProtocolInDistribution(distribution, requestDetailsForm);
+			distributionObjectCollection.add(distribution);
 		}
-		
 		return existingSpecArrOrderItem;
 	}
 
-	
 	/**
 	 * @param map object
 	 * @return Collection object
@@ -1160,7 +1216,7 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 		}
 		catch (Exception e)
 		{
-			Logger.out.debug(""+e);			
+			logger.debug(e);
 		}
 		return beanObjSet;
 	}
@@ -1172,6 +1228,5 @@ public class OrderDetails extends AbstractDomainObject implements Serializable
 	/*public void setAllValues(IValueObject arg0) throws AssignDataException
 	{
 		// TODO Auto-generated method stub
-		
 	}*/
 }
